--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,10 +1,11 @@
 .section {
     display: flex;
     width: 960px;
-    justify-content: space-between;
+    justify-content: center;
     /* align-items: flex-start; */
     align-content: center;
-    padding-left: 100px;
+    /* padding-left: 100px; */
+    padding-top: 100px;
     margin: 0 auto;
   }
   
