--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -1,13 +1,14 @@
 .side {
     width: 30%;
     background-color: #fff;
-    padding: 10px 30px 30px 30px;
+    padding: 10px 30px 0 30px;
     border: 1px #ddd solid;
+    
   }
   
   .side-text {
       text-align: center;
-      font-size: 3vh;
+      font-size: 20px;
       border-bottom: 0.1vh solid #4aaaa5;
       color: #4aaaa5;
       font-weight: 600;
@@ -18,7 +19,8 @@
   }
   
   .social-img {
-    width: 35px;
+    width: 100%;
+    /* margin: auto; */
     display: flex;
     flex-direction: row;
     transition: all 0.5 ease;
@@ -26,5 +28,11 @@
   }
   
   .side img:hover {
-    opacity: 0.8;
+    transform: scale(1.3);
+  }
+
+  .side img{
+    width: 90%;
+    height: 80%;
+    
   }
