--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,6 @@ body {
   padding: 0 225px;
   height: 90px;
   width: 100%;
-  margin-bottom: 200px;
 }
 
 .logo-container {
@@ -72,4 +71,15 @@ body {
 
 .nav a:hover {
   transform: scale(1.3);
+}
+
+footer {
+    margin-top: 20%;
+    background-color: #999999;
+    border-top: 1vh solid #4aaaa5;
+    height: 95px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow:0 0 1vh #999999;
 }
