--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -1,17 +1,19 @@
 .side {
-    width: 30%;
+    width: 270px;
     background-color: #fff;
     padding: 10px 30px 0 30px;
     border: 1px #ddd solid;
+    height: ;
     
   }
   
   .side-text {
       text-align: center;
       font-size: 20px;
-      border-bottom: 0.1vh solid #4aaaa5;
+      border-bottom: 1vh solid #4aaaa5;
       color: #4aaaa5;
       font-weight: 600;
+      padding-bottom: 10px;
   }
   
   .side a {
@@ -25,6 +27,7 @@
     flex-direction: row;
     transition: all 0.5 ease;
     cursor: pointer;
+    padding-top: 15px;
   }
   
   .side img:hover {
