--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,13 @@
   
 }
 
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+}
+
 
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -30,10 +37,12 @@ body {
 }
 
 .logo-container {
+  margin-left: 7%;
   background-color: #4aaaa5;
   height: 90px;
   width: 250px;
   cursor: pointer;
+  
 }
 
 .logo-container a {
@@ -53,6 +62,7 @@ body {
   margin-top: 25px;
   padding-left: 100px;
   display: flex;
+  margin-right: 5%;
 
  
 }
@@ -61,7 +71,8 @@ body {
   padding-left: 40px;
   color: #999;
   font-weight: 500;
-  border-right: 1px solid #eee;
+  border-left: 1px solid #eee;
+  height: 50%;
   padding: 0 15px;
   text-decoration: none;
   font-size: 18px;
@@ -71,6 +82,19 @@ body {
 
 .nav a:hover {
   transform: scale(1.3);
+}
+
+.nav a:first-child {
+  border-left: 0 none;
+}
+
+.section {
+  display: flex;
+  width: 960px;
+  /* padding-left: 100px; */
+  padding-top: 125px;
+  justify-content: center;
+  margin: auto;  
 }
 
 footer {
