--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -3,7 +3,9 @@
     background-color: #fff;
     padding: 10px 30px 0 30px;
     border: 1px #ddd solid;
-    height: ;
+    margin-left: 30px;
+    height: 100%;
+  
     
   }
   
